--- a/from_scratch.ipynb
+++ b/from_scratch.ipynb
@@ -119,7 +119,7 @@
         "outputId": "7db266cc-5c23-4632-ee0b-a4d73b6a9c8d"
       },
       "source": [
-        "x_ = a.numpy()\n",
+        "x_ = x.numpy()\n",
         "x_[0, 0] = 0.\n",
         "\n",
         "print(x)"
