--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -288,7 +288,7 @@
         "Try playing with the learning rate, batch size, and number of epochs. What is the best accuracy that you can get ?\n",
         "\n",
         "Try different neural network architectures, and note the results.\n",
-        "*   Multi-layer perceptron (moar layers)\n",
+        "*   Multi-layer perceptron (more layers)\n",
         "*   Convolutional neural net ([convolution layers](https://pytorch.org/docs/stable/nn.html#convolution-layers) + [max pooling](https://pytorch.org/docs/stable/nn.html?highlight=layers#pooling-layers))\n",
         "*   Residual connections\n",
         "\n",
