--- a/from_scratch.ipynb
+++ b/from_scratch.ipynb
@@ -333,11 +333,11 @@
         "        size=(5000, 2)) - 0.5,\n",
         "    np.random.multivariate_normal(\n",
         "        size=(2500, ),\n",
-        "        mean=(-.25, -.25),\n",
+        "        mean=(-.2, -.2),\n",
         "        cov=((0.005, 0), (0, 0.005))),\n",
         "    np.random.multivariate_normal(\n",
         "        size=(2500, ),\n",
-        "        mean=(0.25, 0.25),\n",
+        "        mean=(0.2, 0.2),\n",
         "        cov=((0.005, 0), (0, 0.005))),\n",
         "))\n",
         "\n",
@@ -631,7 +631,7 @@
         "Bonus:\n",
         " - try more layers\n",
         " - try different activation functions\n",
-        " - try increasing the training dataset size"
+        " - try increasing the training dataset size to 1000"
       ]
     },
     {
