--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -191,7 +191,7 @@
         "torch.manual_seed(seed)\n",
         "\n",
         "model = NeuralNet().to(device)\n",
-        "optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+        "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
         "\n",
         "def train():\n",
         "\n",
